RockWeb/Styles/rock-components/pickers.less
//
// Pickers - used to pick complex data types
// --------------------------------------------------

@picker-menu-padding: 8px;

.picker-select {
  display: flex;
  gap: 6px;
  align-items: center;
}

.picker {
  @media @sm {
    position: relative;
    width: 250px; // needed when floated right to keep the picker from shifting when the (x) appears to allow delete
    max-width: 100%;
  }

  .picker-search-header {
    display: flex;
    align-items: center;
    margin-bottom: 6px;
  }

  .picker-search-action {
    display: block;
    float: right;
    padding: 0 3px;
    margin-left: 3px;
    font-size: @font-size-small;

    &.active {
      background-color: darken(@btn-default-bg, 10%);
    }
  }

  .picker-mode-options {
    margin-bottom: 12px;
  }

  .picker-label {
    display: flex;
    align-items: center;
    width: 100%;
    padding: @input-padding-y @input-padding-x;
    font-size: @font-size-base;
    line-height: @line-height-computed;
    color: @input-color;
    cursor: pointer;
    background-color: @input-bg;
    border: 1px solid @input-border;
    border-radius: @border-radius-base;
    gap: 6px;

    &:hover {
      text-decoration: none;
    }

    span {
      flex: 1 1 0;
      min-height: @line-height-computed;
      overflow: hidden;
      line-height: inherit;
      text-overflow: ellipsis;
      white-space: nowrap;
    }

    .has-error & {
      border-color: @state-danger-text;

      &.active {
        border-color: @brand-danger;
        box-shadow: 0 0 0 3px fade(@brand-danger, 20%);
      }
    }
  }

  &.picker-fullwidth,
  &.picker-fullwidth .picker-label {
    width: 100%;
  }

  .input-group-sm {
    // Always display 100% width. Override for when displaying picker in .inline-form
    width: 100%;

    > .form-control,
    > .input-group-addon {
      height: (@input-height-xs + 4px);
      padding: (@padding-xs-vertical + 2px) @padding-xs-horizontal;
    }

    > .input-group-btn > .btn {
      height: (@input-height-xs + 4px);
      padding-top: (@padding-xs-vertical + 2px);
      padding-bottom: (@padding-xs-vertical + 2px);
    }
  }

  .picker-select-none {
    padding: 1px 6px;
    font-size: 12px;
    background: transparent;
    color: fade(@input-color, 20%);
    border-radius: 50%;
    outline: none;

    &:hover,
    &:focus {
      background: fade(@input-color, 10%);
      color: inherit;
    }
  }

  .scroll-container-picker {
    width: 100%;

    .viewport {
      width: ~"calc(100% - 15px)";
    }

    .scrollbar {
      width: 5px;
    }
  }

  .scroll-container-native {
    width: ~"calc(100% + 16px)";
    padding: 8px;
    margin: -8px;
    overflow-y: auto;
  }

  .scroll-container-native,
  .scroll-container-picker .viewport,
  .scroll-container-picker .scrollbar {
    height: 380px;
    @media (max-device-height: 480px) {
      max-height: 200px;
    }
  }

  dl {
    margin-bottom: 4px;
  }

  hr {
    margin: 8px -@picker-menu-padding 4px;
  }

  h4 {
    margin: 0;
    font-size: @font-size-small;
    font-weight: @font-weight-semibold;
  }

  .picker-menu {
    width: 400px;
    max-height: none; // Added to fix issue where picker paints incorrectly in modals.
    padding: @picker-menu-padding;
    will-change: height;

    @media (max-width: @screen-xs-max) {
      position: static;
      max-width: 100%;
    }
  }

  &.picker-menu-right {
    .picker-menu {
      right: 0;
      left: auto;
    }
  }

  .treeview .search-item {
    margin-bottom: 16px;
    margin-left: 4px;
  }

  .picker-actions {
    display: flex;
    align-items: center;
    padding: @picker-menu-padding;
    margin: @picker-menu-padding -@picker-menu-padding -@picker-menu-padding -@picker-menu-padding;
    font-size: @font-size-xs;
    background-color: @picker-action-bg;
    border-top: 1px solid @picker-action-border;
    border-radius: 0 0 @border-radius-base @border-radius-base;
    gap: 0 4px;

    .pull-right {
      margin-left: auto;
    }

    .btn {
      width: auto;
    }

    .rock-checkbox-icon i {
      width: 1rem;
      margin-right: 0;
      font-size: inherit;
    }

    .btn-select-all {
      order: 10;
    }
  }

  .picker-select-item {
    margin-left: 3px;

    .radio {
      margin-right: 0;
    }

    label,
    .label-text {
      display: block;
    }
  }

  .personpicker-search-panel {
    .input-group {
      margin: 0 0 4px;
    }

    .input-group-addon {
      width: 85px;
      text-align: left;
    }
  }

  // details used for pickers like person picker to show the details of the selected item
  .picker-select-item-details {
    @media (min-width: @screen-sm-min) {
      margin-left: 29px;
    }

    .person-image {
      float: left;
      width: 70px;
      height: 70px;
      margin-right: 8px;
      background-position: 50%;
      background-size: cover;
      border: 1px solid @photo-border;
      border-radius: 50%;
    }

    .label.pull-right {
      position: absolute;
      right: 0;
      display: inline-block;
      max-width: 40%;
      overflow: hidden;
      text-overflow: ellipsis;
      white-space: nowrap;
    }

    .contents {
      float: left;
      width: ~"calc(100% - 78px)";

      h5 {
        margin-bottom: 2px;
      }
    }
  }

  &.picker-geography {
    .picker-menu {
      width: 520px;
    }
  }

  &.picker-person {
    .picker-select-none {
      display: none;
    }

    .show-hover {
      display: block;
      // visibility: hidden;
      color: transparent
    }

    .picker-label:hover .show-hover,
    .picker-label:focus .show-hover,
    .show-hover:focus {
      // visibility: visible;
      color: inherit;
    }

    .picker-select-list {
      padding: 0;
      list-style: none;
    }

    .picker-select-item-details {
      position: relative;

      label {
        position: absolute;
        top: 0;
        right: 0;
      }

      img {
        width: 65px;
      }
    }
  }

  &.picker-novalue {
    // used for pickers that do not retain values to remove the extra spacing needed for the 'x'
    .picker-label {
      width: 100%;
      max-width: 100%;
    }
  }

  &.picker-mergefield {
    width: 370px;
    max-width: 100%;
  }

  &.picker-lg {
    @media @sm {
      position: relative;
      width: 350px;
    }
  }
}

// date time picker
.date-time-picker {
  margin-bottom: 11px;

  .input-group {
    margin-bottom: 4px;
  }
}

// Campus Account Amount Picker
.campus-account-amount-picker {
  &,
  .amount-input,
  .campus-dropdown,
  .account-dropdown {
    margin-bottom: @form-group-margin-bottom;
  }
}

